Fixed some layout bugs - we now have some display\!

--- a/css/fewtile.css
+++ b/css/fewtile.css
@@ -14,3 +14,59 @@
   border:0;
   padding:0;
 }
+
+#fewtile .tile {
+  /* Firefox */
+  display:-moz-box;
+  -moz-box-orient:horizontal;
+  -moz-box-pack:center;
+  -moz-box-align:center;
+
+  /* Safari and Chrome */
+  display:-webkit-box;
+  -webkit-box-orient:horizontal;
+  -webkit-box-pack:center;
+  -webkit-box-align:center;
+
+  /* W3C */
+  display:box;
+  box-orient:horizontal;
+  box-pack:center;
+  box-align:center;
+
+  /* other styles */
+  /*border: 1px solid black;*/
+  margin: 0;
+  padding: 0;
+
+  color: #ffffff;
+}
+
+.passTile, .allJobsPassing {
+  background-color: #308A48;
+}
+
+.failTile, .noJobsTile {
+  background-color: #BD3333;
+}
+
+.disabledTile {
+  color: #eeeeee;
+  background-color: #999999;
+}
+
+.jollyRogerTile {
+  background-color: black;
+}
+
+.loadingTile {
+  background-color: blue;
+}
+
+.buildingTile {
+  background-color: yellow; 
+}
+
+.failedRebuildingTile {
+  background-color: #9C6425;
+}
